# lords

./: .dockerignore  .env.example  .gitignore  conversion_log.txt  docker-compose.yml  garagem94  human.md  log.txt  package.json  processData.json  start.md  tsconfig.json
apps/api/: Dockerfile  Dockerfile.dev  package.json  tsconfig.json
apps/api/scripts/: seed_client.ts
apps/api/src/: index.ts  redis.ts  websocket.ts
apps/bot-brain-rust/: Cargo.toml  Dockerfile  build.rs
apps/bot-brain-rust/src/: main.rs
apps/bot-gateway-go/: Dockerfile  go.mod  go.sum  main.go
apps/bot-gateway-go/pb/: dolphin.pb.go  dolphin_grpc.pb.go
apps/bot-whatsmeow/: README.md  go.mod  go.sum  main.go
apps/cf-api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
apps/cf-api/src/: index.ts  types.ts
apps/web/: Dockerfile.dev  package.json  tailwind.config.js  vite.config.ts
apps/web-rep/: Dockerfile.dev  index.html  package.json  vite.config.ts
apps/web-rep/src/: App.tsx  index.css
apps/web/src/: App.tsx  index.css  main.tsx
apps/workers/: Dockerfile.dev  package.json
apps/workers/src/: bottleneck_worker.ts  index.ts
infra/cloudflared/: config.yml  docker-compose.local.yml
infra/docker/: docker-compose.yml
infra/k8s/: api.yaml  data.yaml  web.yaml  workers-bridge.yaml
monday/: ProjectFlow.jsx  README.md  manifest.json  schema.sql  sw.js  worker.ts  wrangler.toml
money/: imperio-lord-app.jsx  schema.sql  worker.js
scripts/: convert_pg_to_d1.ts  convert_schema_to_sqlite.js  copy_pf.js  gen_migration.ps1  split_migration.js  split_migration.ts
(+137 files in other folders)
