[package]
name = "bot-brain-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
fastembed = "5.10.0"
ort = "2.0.0-rc.11"
futures = "0.3.32"
kiddo = "5.2.4"
log = "0.4.29"
ndarray = "0.17.2"
prost = "0.14.3"
qdrant-client = "1.17.0"
redis = "1.0.4"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
